# zeno-gateway

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  PROMETHEUS.md  README.md  TESTING.md  build.rs  cert.pem  key.pem
.github/workflows/: docker-build.yml
proto/: ankr.proto  auth.proto
src/: ankr.rs  ankr_types.rs  api.rs  appstate.rs  auth.rs  backend.rs  client.rs  common.rs  db.rs  endpoint.rs  error.rs  filter.rs  forex.rs  forex1.rs  indexer.rs  main.rs  prometheus.rs  rpc.rs  rules.rs  service.rs  state.rs  utils.rs
src/pb/: ankr.rs  auth.rs  mod.rs
src/proto/: api.proto
