[package]
name = "zeno-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
http = "1.3.1"

reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26.2"
tower = "0.5.1"
tower-http = { version = "0.5.0", features = ["full"] }
tower_governor = "0.7.0"
sha2 = "0.10"
moka = "0.12.11"
sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Prometheus 监控
axum-prometheus = "0.7.0"
prometheus = "0.13"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }


