[package]
name = "zeno-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
http = "1.3.1"

reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26.2"
tower = "0.5.1"
tower-http = { version = "0.5.0", features = ["full"] }
tower_governor = "0.7.0"
sha2 = "0.10"
moka = { version = "0.12.11", features = ["future"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }

dotenvy = "0.15.7"
prost = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "0.14.2", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"



