[package]
name = "zeno-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# 核心依赖
tokio = { version = "1.46.1", features = ["full"] }
tonic = { version = "0.14.2", features = ["transport", "_tls-any"] }
tonic-prost = "0.14.2"
reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"] }
futures-util = "0.3"
rustls = "0.23"
rustls-pemfile = "2.1"
tokio-rustls = "0.26.2"

# 数据库和缓存
sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }
moka = { version = "0.12.11", features = ["future"] }

# 工具类
dotenvy = "0.15.7"
prost = "0.14.1"
prost-types = "0.14.1"
anyhow = "1.0"
thiserror = "1.0"
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
tower_governor = "0.8.0"
tower =  { version = "0.5.2", features = ["full"] } 

[build-dependencies]
tonic-prost-build = "0.14.2"